sort.basic.shell.AlgShellSort.scala.error
Compilation error:
AlgShellSort:17: error: not found: value value
        while(it - k*gap >0 && !isSmaller(it-k*gap,value)){
                                                   ^